--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -133,7 +133,7 @@ jobs:
           if [ -n "${{ github.event.inputs.stacks }}" ]; then
             echo "value=${{ github.event.inputs.stacks }}" >> "$GITHUB_OUTPUT"
           else
-            STACKS_LIST="$(cdk ls --app '${{ steps.assembly.outputs.app }}' | awk '{print $NF}')"
+            STACKS_LIST="$(cdk ls --app '${{ steps.assembly.outputs.app }}' | awk '{print $NF}' | sed 's/^(//; s/)$//')"
             echo "value=${STACKS_LIST}" >> "$GITHUB_OUTPUT"
           fi
 
