--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ permissions:
 
 jobs:
   build-docker-image:
-    name: Synthesize CDK (cdk.out)
+    name: Push docker image to ECR
     runs-on: ubuntu-latest
 
     permissions:
@@ -53,7 +53,7 @@ jobs:
 
       - name: Tag Docker image
         run: |
-          docker tag java-app-repo:latest 707690426194.dkr.ecr.us-east-1.amazonaws.com/fastapi-app:latest
+          docker tag fastapi-app:latest 707690426194.dkr.ecr.us-east-1.amazonaws.com/fastapi-app:latest
 
       - name: Push Docker image to ECR
         run: |
@@ -61,6 +61,7 @@ jobs:
   synth:
     name: Synthesize CDK (cdk.out)
     runs-on: ubuntu-latest
+    needs: build-docker-image
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -168,7 +169,7 @@ jobs:
             STACKS_LIST="$(cdk ls --app '${{ needs.assembly.outputs.app }}' \
               | awk '{ gsub(/\(|\)/,"",$NF); print $NF }')"
             {
-              echo "value=<<EOF"
+              echo "value<<EOF"
               echo "$STACKS_LIST"
               echo "EOF"
             } >> "$GITHUB_OUTPUT"
